--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
 ---
 layout: default
+permalink: /
 ---
+
+<section id="about">
+  {% include about.html %}
+</section>
+
+<section id="projects">
+  {% include projects.html %}
+</section>
