--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@ permalink: /
   {% include about.html %}
 </section>
 
+<script>
+  window.addEventListener("load", function() {
+    const el = document.getElementById("about");
+    if (el) {
+      el.scrollIntoView({ behavior: "smooth" });
+    }
+  });
+</script>
+
 <section id="projects">
   {% include projects.html %}
 </section>
+
+<script>
+  window.addEventListener("load", function() {
+    const el = document.getElementById("projects");
+    if (el) {
+      el.scrollIntoView({ behavior: "smooth" });
+    }
+  });
+</script>
